--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
     -moz-osx-font-smoothing: grayscale;
 }
 body{
-    height: 2500px;
     padding: 0;
     margin: 0;
     font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;}
@@ -183,7 +182,12 @@ a{text-decoration: none;}
     display:none;
 }
 .seckill .seckill-banner{
+    width: 1226px;
     margin: -82px 0 22px;
+}
+.seckill .seckillFixed{
+    position: fixed;
+    top: 68px;
 }
 .seckill .seckill-banner ul{
     background: #414141;
@@ -223,15 +227,10 @@ a{text-decoration: none;}
     margin-left: 0;
     line-height: 20px;
 }
-.seckill .seckill-banner ul li:first-child{
+.seckill .seckill-banner ul .active{
     background-color: #f1393a;}
 .seckill .seckill-banner ul li:first-child span em{
 	font-size: 14px;	
-	}
-.seckill-con ul{
-    list-style: none;
-	margin-right:-13px;
-    padding-left: 0;
 }
 .seckill-con ul::after{
     content: ".";
@@ -254,9 +253,15 @@ a{text-decoration: none;}
 .seckill .notic{
 	font-size:12px;
 	color:#999;
-	margin-top:100px;
+	margin-top:56px;
 	padding-bottom:35px;
 }
+.seckill-con .active{display: block;}
+.seckill-con  ul{
+    display: none;
+    list-style: none;
+    margin-right:-13px;
+    padding-left: 0;}
 .seckill-con  ul .bg{float:left;}
 .seckill-con  ul .bg img{
 	width:190px;
@@ -315,3 +320,7 @@ a{text-decoration: none;}
 	line-height: 1;
 	margin-left:10px;
 }
+
+.site-footer .footer-service{
+padding: 27px 0;
+border-bottom: 1px solid #e0e0e0;}
