--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,22 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
+*{
+    margin: 0;
+    padding: 0;}
 body{
     padding: 0;
     margin: 0;
-    font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;}
-a{text-decoration: none;}
+    font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
+    color:#333;}
+a{text-decoration: none;
+}
+.clearfix:before,.clearfix:after {
+    content: "";
+    display: block;
+    clear: both;}
+.clearfix {
+    zoom: 1;}
 .topbar{
     background-color: #333;
     height: 40px;
@@ -192,7 +203,6 @@ a{text-decoration: none;}
 .seckill .seckill-banner ul{
     background: #414141;
     height: 68px;
-    padding-left: 0;
 }
 .seckill .seckill-banner ul li{
     display: block;
@@ -260,8 +270,7 @@ a{text-decoration: none;}
 .seckill-con  ul{
     display: none;
     list-style: none;
-    margin-right:-13px;
-    padding-left: 0;}
+    margin-right:-13px;}
 .seckill-con  ul .bg{float:left;}
 .seckill-con  ul .bg img{
 	width:190px;
@@ -322,5 +331,89 @@ a{text-decoration: none;}
 }
 
 .site-footer .footer-service{
-padding: 27px 0;
-border-bottom: 1px solid #e0e0e0;}
+    padding: 27px 0;
+    border-bottom: 1px solid #e0e0e0;}
+.site-footer .footer-service ul{
+    list-style: none;
+}
+.site-footer .footer-service ul li{
+    float: left;
+    width: 19.8%;
+    font-size: 16px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    border-left: 1px solid #e0e0e0;
+}
+.site-footer .footer-service ul li:first-child{
+    border-left: 0;}
+.site-footer .footer-service ul li a{
+    color: #616161;
+    transition: color .2s;
+}
+.site-footer .footer-service ul li a:hover{color:#ff6700;}
+.site-footer .footer-service ul li a .iconfont{
+    margin-right: 6px;
+    font-size: 24px;
+    line-height: 24px;
+    vertical-align: -4px;}
+.site-footer .footer-links{
+    padding: 40px 0;
+}
+.site-footer .footer-links dl{
+    float: left;
+    width: 160px;
+    height: 112px;
+}
+.site-footer .footer-links dl dt{margin: -1px 0 26px;
+    font-size: 14px;
+    line-height: 1.25;
+    color: #424242;}
+.site-footer .footer-links dl dd{
+    margin: 10px 0 0;
+    font-size: 12px;}
+.site-footer .footer-links dl dd a{
+    color: #757575;}
+.site-footer .footer-links .col-contact{float: right;
+    width: 251px;
+    height: 112px;
+    border-left: 1px solid #e0e0e0;
+    text-align: center;
+    color: #616161;}
+.site-footer .footer-links .col-contact .phone{
+    margin: 0 0 5px;
+    font-size: 22px;
+    line-height: 1;
+    color: #ff6700;
+}
+.site-footer .footer-links .col-contact p{
+    margin: 0 0 16px;
+    font-size: 12px;
+}
+.site-footer .footer-links .col-contact a{
+    background: #fff;
+    color: #ff6700;
+    width: 118px;
+    height: 28px;
+    font-size: 12px;
+    line-height: 28px;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ff6700;
+    text-align: center;
+    cursor: pointer;
+    transition: all .4s;
+}
+.site-footer .footer-links .col-contact a:hover{
+    color: #fff;
+    background-color: #ff6700;
+}
+
+
+.site-info .slogan{clear: both;
+    margin: 30px auto 0;
+    height: 25px;
+    font-size: 20px;
+    text-align: center;
+    /*background: url(../i/slogan2016.png) no-repeat center 0;*/}
